# machine-learning

./: .gitignore  README.md  ml.ipynb  pyproject.toml
src/modules/lmath/: __init__.py  matrix.py  vector.py
